// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Trend /> has valid snapshot 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body css-0"
  >
    + 0.03
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1"
      data-testid="TrendingUpRoundedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m16.85 6.85 1.44 1.44-4.88 4.88-3.29-3.29a.9959.9959 0 0 0-1.41 0l-6 6.01c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L9.41 12l3.29 3.29c.39.39 1.02.39 1.41 0l5.59-5.58 1.44 1.44c.31.31.85.09.85-.35V6.5c.01-.28-.21-.5-.49-.5h-4.29c-.45 0-.67.54-.36.85z"
      />
    </svg>
  </p>
</DocumentFragment>
`;

exports[`<Trend /> has valid snapshot 2`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body css-0"
  >
    - 0.03
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1"
      data-testid="TrendingDownRoundedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m16.85 17.15 1.44-1.44-4.88-4.88-3.29 3.29c-.39.39-1.02.39-1.41 0l-6-6.01a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0L9.41 12l3.29-3.29c.39-.39 1.02-.39 1.41 0l5.59 5.58 1.44-1.44c.31-.31.85-.09.85.35v4.29c0 .28-.22.5-.5.5H17.2c-.44.01-.66-.53-.35-.84z"
      />
    </svg>
  </p>
</DocumentFragment>
`;

exports[`<Trend /> has valid snapshot 3`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body css-0"
  >
    = 0
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1"
      data-testid="TrendingFlatRoundedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m21.65 11.65-2.79-2.79c-.32-.32-.86-.1-.86.35V11H4c-.55 0-1 .45-1 1s.45 1 1 1h14v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7z"
      />
    </svg>
  </p>
</DocumentFragment>
`;
